--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -701,7 +701,7 @@ padding-right: 39%;
 
 #carDisplay
 {
-  background-color:  #90BED4;
+  background-color:  grey;
   border: 1px solid #BFBFBF;
   box-shadow: 10px 10px 8px #888888;
   justify-content: center;
