--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -479,8 +479,8 @@ width: 100%;
     {
       align-items: center;   
 justify-content: center;  
-padding-left: 36%;
-padding-right: 39%;
+padding-left: 34.5%;
+padding-right: 40.5%;
 width: 100%;
        
     }
@@ -500,8 +500,8 @@ width: 100%;
     {
       align-items: center;   
 justify-content: center;  
-padding-left: 36%;
-padding-right: 39%;
+padding-left: 34.5%;
+padding-right: 40.5%;
 width: 100%;
        
     }
@@ -523,8 +523,8 @@ width: 100%;
     {
       align-items: center;   
       justify-content: center;  
-      padding-left: 36%;
-      padding-right: 39%;
+      padding-left: 34.5%;
+      padding-right: 40.5%;
       width: 100%;
 
     }
@@ -602,8 +602,8 @@ width: 100%;
     {
       align-items: center;   
       justify-content: center;  
-      padding-left: 36%;
-padding-right: 39%;
+      padding-left: 34.5%;
+      padding-right: 40.5%;
       width: 100%;
 
     }
@@ -625,8 +625,8 @@ padding-right: 39%;
     {
       align-items: center;   
       justify-content: center;  
-      padding-left: 36%;
-      padding-right: 39%;
+    padding-left: 34.5%;
+padding-right: 40.5%;
       width: 100%;
 
     }
@@ -701,7 +701,7 @@ padding-right: 39%;
 
 #carDisplay
 {
-  background-color:  grey;
+  background-color: aliceblue;
   border: 1px solid #BFBFBF;
   box-shadow: 10px 10px 8px #888888;
   justify-content: center;
@@ -712,7 +712,7 @@ padding-right: 39%;
 
 #stockPosition 
 {
-  padding-left: 22.65px;
+  padding-left: 22.15px;
 }
 
 .carPictures
